package com.cagdassalur.billing.constants;

public enum ProductTypes {
    GROCERY,
    ELECTRONICS,
    CLOTHING,
    STATIONERY,
    COSMETICS;
}
