package com.cagdassalur.billing.constants;

public enum UserTypes {
    EMPLOYEE,
    AFFILIATE,
    CUSTOMER;
}
